--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,30 +12,31 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_SWECC_RABBIT_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/swecc-redis:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/swecc-redis:${{ github.sha }}
+      - name: Build and push
+        run: |
+          docker pull rabbitmq:3-management
+          docker tag rabbitmq:3-management ${{ secrets.DOCKERHUB_USERNAME }}/rabbitmq-custom:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/rabbitmq-custom:latest
+
       - name: Deploy
         run: |
           docker stop swecc-redis-instance || true
           docker rm swecc-redis-instance || true
 
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/swecc-redis:latest
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:latest
 
           docker run -d \
             --name swecc-redis-instance \
             --network swag-network \
             -p 6379:6379 \
             --restart unless-stopped \
-            ${{ secrets.DOCKERHUB_USERNAME }}/swecc-redis:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:latest
