--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
           docker run -d \
             --name swecc-rabbit-instance \
             --network swag-network \
-            -p 6379:6379 \
+            -p 5672:5672 \
+            -p 15672:15672 \
+            -v swecc-rabbit-data:/var/lib/rabbitmq \
             --restart unless-stopped \
             ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:latest
