--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,17 @@ jobs:
       - name: Build and push
         run: |
           docker pull rabbitmq:3-management
-          docker tag rabbitmq:3-management ${{ secrets.DOCKERHUB_USERNAME }}/rabbitmq:latest 
-          docker tag rabbitmq:3-management ${{ secrets.DOCKERHUB_USERNAME }}/rabbitmq:${{ github.sha }}
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/rabbitmq:latest 
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/rabbitmq:${{ github.sha }}
+          docker tag rabbitmq:3-management ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:latest 
+          docker tag rabbitmq:3-management ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:${{ github.sha }}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:latest 
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:${{ github.sha }}
 
       - name: Deploy
         run: |
           docker stop swecc-rabbit-instance || true
           docker rm swecc-rabbit-instance || true
 
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbitmq:latest
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:latest
 
           docker run -d \
             --name swecc-rabbit-instance \
@@ -43,4 +43,4 @@ jobs:
             -p 15672:15672 \
             -v swecc-rabbit-data:/var/lib/rabbitmq \
             --restart unless-stopped \
-            ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbitmq:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/swecc-rabbit:latest
